RESOLVED FIXED48534
Web Inspector: pausing doesn't work
https://bugs.webkit.org/show_bug.cgi?id=48534
Summary Web Inspector: pausing doesn't work
Pavel Podivilov
Reported 2010-10-28 11:33:24 PDT
Web Inspector: pausing doesn't work
Attachments
Patch. (16.96 KB, patch)
2010-10-28 11:35 PDT, Pavel Podivilov
no flags
Patch. (3.10 KB, patch)
2010-10-28 11:36 PDT, Pavel Podivilov
no flags
Pavel Podivilov
Comment 1 2010-10-28 11:35:41 PDT
Pavel Podivilov
Comment 2 2010-10-28 11:36:53 PDT
Joseph Pecoraro
Comment 3 2010-10-28 11:38:29 PDT
Comment on attachment 72213 [details] Patch. Sounds like this one could use a test. Yury has written a lot of debugger tests in the past, he might be a good person to talk to.
Pavel Feldman
Comment 4 2010-10-28 12:42:46 PDT
(In reply to comment #3) > (From update of attachment 72213 [details]) > Sounds like this one could use a test. Yury has written a lot of debugger tests in the past, he might be a good person to talk to. And as far as I am concerned, most of them are using Pavel's debugging testing harness...
WebKit Commit Bot
Comment 5 2010-10-28 13:14:17 PDT
Comment on attachment 72213 [details] Patch. Clearing flags on attachment: 72213 Committed r70799: <http://trac.webkit.org/changeset/70799>
WebKit Commit Bot
Comment 6 2010-10-28 13:14:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.