2010-10-28  Pavel Podivilov  <podivilov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: fix pausing on next JavaScript statement
        https://bugs.webkit.org/show_bug.cgi?id=48534

        * inspector/InspectorDebuggerAgent.cpp:
        (WebCore::InspectorDebuggerAgent::InspectorDebuggerAgent):
        (WebCore::InspectorDebuggerAgent::schedulePauseOnNextStatement):
        (WebCore::InspectorDebuggerAgent::cancelPauseOnNextStatement):
        (WebCore::InspectorDebuggerAgent::pause):
        (WebCore::InspectorDebuggerAgent::didPause):
        * inspector/InspectorDebuggerAgent.h:

Canonical link: https://commits.webkit.org/61312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70799 268f45cc-cd09-0410-ab3c-d52691b4dbfc