WebCore/inspector/InspectorDebuggerAgent.cpp
@@ -62,6 +62,7 @@ InspectorDebuggerAgent::InspectorDebuggerAgent(InspectorController* inspectorCon
     , m_frontend(frontend)
     , m_pausedScriptState(0)
     , m_breakpointsLoaded(false)
+    , m_javaScriptPauseScheduled(false)
 {
 }
 
@@ -144,6 +145,8 @@ void InspectorDebuggerAgent::getScriptSource(const String& sourceID, String* scr
 
 void InspectorDebuggerAgent::schedulePauseOnNextStatement(DebuggerEventType type, PassRefPtr<InspectorValue> data)
 {
+    if (m_javaScriptPauseScheduled)
+        return;
     m_breakProgramDetails = InspectorObject::create();
     m_breakProgramDetails->setNumber("eventType", type);
     m_breakProgramDetails->setValue("eventData", data);
@@ -152,6 +155,8 @@ void InspectorDebuggerAgent::schedulePauseOnNextStatement(DebuggerEventType type
 
 void InspectorDebuggerAgent::cancelPauseOnNextStatement()
 {
+    if (m_javaScriptPauseScheduled)
+        return;
     m_breakProgramDetails = 0;
     ScriptDebugServer::shared().setPauseOnNextStatement(false);
 }
@@ -159,6 +164,7 @@ void InspectorDebuggerAgent::cancelPauseOnNextStatement()
 void InspectorDebuggerAgent::pause()
 {
     schedulePauseOnNextStatement(JavaScriptPauseEventType, InspectorObject::create());
+    m_javaScriptPauseScheduled = true;
 }
 
 void InspectorDebuggerAgent::resume()
@@ -309,6 +315,7 @@ void InspectorDebuggerAgent::didPause(ScriptState* scriptState)
     m_breakProgramDetails->setValue("callFrames", currentCallFrames());
 
     m_frontend->pausedScript(m_breakProgramDetails);
+    m_javaScriptPauseScheduled = false;
 }
 
 void InspectorDebuggerAgent::didContinue()
